[package]
name = "kvaultcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"]}
env_logger = "0.9"
reqwest = "0.11"
log = "0.4"
serde_json = "1.0"
dotenv = "0.15"
